service.yml
apiVersion: v1
kind: Service
metadata:
  name: my-app-svc
  namespace: default
spec:
  selector:
    app: amazon-app         # 👈 match deployment labels
  ports:
    - port: 80              # exposed port to Ingress
      targetPort: 3000      # matches containerPort
  type: ClusterIP
